<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jogo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_jogada" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnPedra"
                android:src="@mipmap/pedra"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/pedra"/>

            <ImageButton
                android:id="@+id/btnPapel"
                android:src="@mipmap/papel"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/papel" />

            <ImageButton
                android:id="@+id/btnTesoura"
                android:src="@mipmap/tesoura"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/tesoura" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvQuantidadeRodadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qtdRodadas" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/resultado" />

        <TextView
            android:id="@+id/tvJogadaComputador1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jogada_do_computador_1"/>

        <ImageView
            android:id="@+id/ivJogadaComputador1"
            android:layout_width="match_parent"
            android:layout_height="64dp"  />

        <TextView
            android:id="@+id/tvJogadaComputador2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/jogada_do_computador_2"/>

        <ImageView
            android:id="@+id/ivJogadaComputador2"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="64dp"  />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>